# ruff-sqlalchemy-repro

./: README.md  main.py  pyproject.toml
src/: engine.py
src/models/: __init__.py  base.py  birthday.py
