[tool.poetry]
name = "ruff-repro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ruff_repro"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"

[tool.ruff]
line-length = 79
select = ["ALL"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
